Backend-Simple-View-Works

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecologea</title>
+    <script src="js/Blog.js"></script>
+
 </head>
 <body>
-    <td id="blogs"></td>
+    <table></table>
 </body>
 </html>
+
