Basic-Frontend-Works

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <script src="js/Blog.js"></script>
 
 </head>
-<body>
-    <table></table>
+<body onload="viewBlogsFiltered()">
+    <table id="tableContent"></table>
 </body>
 </html>
 
