Tested-Filtered-Posts-Backend

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 
 </head>
 <body onload="viewBlogsFiltered()">
+    <input type="date"></input>
+    <button onclick="filter()"></button>
     <table id="tableContent"></table>
 </body>
 </html>
