This is the source code for the submission

--- a/public/edit.html
+++ b/public/edit.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src = 'js/DeleteBlog.js'></script>
+    <script src = 'js/UpdateBlog.js'></script>
 </head>
 <body onload="viewPosts()">
     <div class="row justify-content-center">
@@ -28,6 +29,7 @@
             </table>
         </div>
     </div>
+    <button><a href="index.html" class="btn">Back</a></button>
     <!-- Delete modal -->
     <div class="modal fade" id="resourceModal" tabindex="-1" role="dialog" aria-labelledby="resourceModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
