--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body onload = "viewBlogsFiltered('default')">
     <!-- Navigation Bar -->
     <div id="nav">
         <button id="add" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addPostModal">
