--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,10 @@
         <button id="account" type="button" class="btn btn-primary" onclick="window.location.href = 'edit.html'"> Account </button>
     </div>
     <!-- Navigation Bar -->
-    <div class="filter-container">
-        <input type="date" id="filter_date">
+    <div class="filter-container" id="filter-container">
+        <input type="date" id="filter_date" required>
         <button onclick="filter()">Filter</button>
+        <button onclick="clear_filter()">Clear Filter</button>
     </div>
     <table id="tableContent">
         <td>Sorry, There are no posts yet.
