--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <button id="add" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addPostModal">
             Add Post
         </button>
-        <h1 id="app"> Ecologea </h1>
+        <h1 id="app">Sean Ecologea </h1>
         <button id="account" type="button" class="btn btn-primary" onclick="window.location.href = 'edit.html'"> Account </button>
     </div>
     <!-- Navigation Bar -->
