--- a/instrumented/index.html
+++ b/instrumented/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecologea</title>
+    <title>Sean Ecologea</title>
 =======
     <script src="js/ReadBlog.js"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -24,7 +24,7 @@
         <button id="add" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addPostModal">
             Add Post
         </button>
-        <h1 id="app"> Ecologea </h1>
+        <h1 id="app">Sean Ecologea </h1>
         <button id="account" type="button" class="btn btn-primary" onclick="window.location.href = 'edit.html'"> Account </button>
     </div>
     <!-- Navigation Bar -->
